# mt5-signal-system

./: .gitignore  ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  BUILD_README.md  CHEATSHEET.md  DELIVERY_CHECKLIST.md  DOCKER_LIMITATION.md  Dockerfile.windows  FIX_GITHUB_ACTIONS.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_ACTIONS_QUICK_REF.md  GITHUB_ACTIONS_SUMMARY.md  INDEPENDENT_MQTT_AUTH.md  INSTALL_GUIDE.md  LICENSE  LICENSE_SYSTEM.md  MANAGER_GUIDE.md  MT5_Master_Panel.spec  MT5_Slave_Panel.spec  MT5_Unified_Manager.spec  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_MANAGER.md  README.md  README_WINDOWS.md  TROUBLESHOOTING.md  WINDOWS_COMPATIBILITY.md  WINDOWS_GUIDE.md  build_all.bat  build_all.py  build_exe.bat  build_manager.bat  build_master.py  build_slave.py  build_unified.py  build_windows.py  build_with_docker.sh  config_panel.py  deploy.bat  (+23 more)
.github/workflows/: build-macos.yml  build-manager.yml  build-master.yml  build-slave.yml  build-windows.yml  release-all.yml  release.yml
common/: __init__.py  account_reporter.py  i18n.py  models.py  mqtt_client.py  utils.py
config/: master_config.json  slave_config.json
docs/: I18N_GUIDE.md
ip_manager/: .gitignore  CMakeLists.txt  main.cpp
ip_manager/src/ai/: AIGenerator.cpp  AIGenerator.h
ip_manager/src/core/: ConfigManager.cpp  ConfigManager.h  Database.cpp  Database.h
ip_manager/src/models/: Application.h
ip_manager/src/network/: FileDownloader.cpp  FileDownloader.h
ip_manager/src/payment/: PaymentService.cpp  PaymentService.h
ip_manager/src/tracker/: CNIPATracker.cpp  CNIPATracker.h  ProgressTracker.cpp  ProgressTracker.h
ip_manager/src/utils/: Logger.cpp  Logger.h
ip_manager/ui/: MainWindow.cpp  MainWindow.h
lang/: Chinese.json  Chinese.nsh  English.json  English.nsh
master/: __init__.py  auth_manager.py  mqtt_auth_bridge.py  signal_sender.py
services/: __init__.py  config_manager.py  mt5_detector.py  process_manager.py
slave/: __init__.py  authenticated_client.py  risk_manager.py  signal_receiver.py  symbol_mapper.py
test/: test_mqtt.py
tools/: check_config.py  validate_lang.py
ui/: __init__.py  dashboard.py  logs.py  master_config.py  monitoring.py  slave_config.py
